# ChangeLog for net-im/gossip
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.50 2006/11/11 21:53:41 tester Exp $

*gossip-0.19 (11 Nov 2006)

  11 Nov 2006; Olivier Crête <tester@gentoo.org> -gossip-0.14.ebuild,
  -gossip-0.15.ebuild, -gossip-0.16.ebuild, +gossip-0.19.ebuild:
  Version bump, cleanup old versions

*gossip-0.18 (28 Oct 2006)

  28 Oct 2006; Olivier Crête <tester@gentoo.org> +gossip-0.18.ebuild:
  Version bump, bug #149422

*gossip-0.16 (17 Sep 2006)

  17 Sep 2006; Marinus Schraal <foser@gentoo.org> gossip-0.16.ebuild :
  New release

*gossip-0.15 (30 Aug 2006)

  30 Aug 2006; Marinus Schraal <foser@gentoo.org> gossip-0.15.ebuild :
  New release

*gossip-0.14 (04 Aug 2006)

  04 Aug 2006; Marinus Schraal <foser@gentoo.org> gossip-0.14.ebuild :
  New release

  03 Aug 2006; Marinus Schraal <foser@gentoo.org> files/gossip-0.13-ppc_conn_fix.patch :
  zip patch so it doesn't get a cvs id tag

*gossip-0.13-r1 (03 Aug 2006)

  03 Aug 2006; Marinus Schraal <foser@gentoo.org> gossip-0.13-r1.ebuild,
  files/gossip-0.13-ppc_conn_fix.patch :
  Add fix for connection issues on PPC

*gossip-0.13 (31 Jul 2006)

  31 Jul 2006; Marinus Schraal <foser@gentoo.org> gossip-0.13.ebuild :
  New release

*gossip-0.12 (08 Jul 2006)

  08 Jul 2006; Marinus Schraal <foser@gentoo.org> gossip-0.12.ebuild :
  New release
  Add gnome-doc-utils dep (#130939)

  26 Jun 2006; Markus Rothe <corsair@gentoo.org> gossip-0.11.2-r1.ebuild:
  Added ~ppc64; bug #136906

*gossip-0.11.2-r1 (16 Jun 2006)

  16 Jun 2006; Tony Vroon <chainsaw@gentoo.org> -gossip-0.11.2.ebuild,
  +gossip-0.11.2-r1.ebuild:
  Sync DEPEND & RDEPEND with configure.ac; remove galago USE-flag as the
  galago daemon fails to start at all on my system. Add ~sparc back, this was
  lost over galago only.

*gossip-0.11.2 (15 Jun 2006)

  15 Jun 2006; Tony Vroon <chainsaw@gentoo.org> metadata.xml,
  +gossip-0.11.2.ebuild: