@@ -1,6 +1,10 @@
 # ChangeLog for net-im/gossip
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.50 2006/11/11 21:53:41 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.51 2006/11/23 04:14:41 tester Exp $
+
+  23 Nov 2006; Olivier Crête <tester@gentoo.org> -gossip-0.18.ebuild,
+  gossip-0.19.ebuild:
+  Move depend to dbus-glib, and removed old version
 
 *gossip-0.19 (11 Nov 2006)
 
